--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ProgAndroProject</string>
+    <string name="app_name">Instagram</string>
+    <string name="back"><![CDATA[<-]]></string>
+
 </resources>
